[package]
name = "tokamak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.55" }
async-compression = { version = "0.3", features = [
    "brotli",
    "deflate",
    "gzip",
    "tokio",
] }
async-trait = "0.1"
bitflags = "1"
bytes = "1"
cookie = { version = "0.16", features = ["percent-encode"] }
encoding_rs = "0.8"
fastrand = "1.5"
form_urlencoded = "1"
futures-util = { version = "0.3", default-features = false }
headers = "0.3"
http = "0.2"
hyper = { version = "0.14", features = [
    "stream",
    "server",
    "http1",
    "http2",
    "tcp",
    "client",
] }
mime = "0.3"
mime_guess = "2"
multer = "2"
multimap = { version = "0.8", features = ["serde"] }
num_cpus = "1"
once_cell = "1"
percent-encoding = "2"
pin-project-lite = "0.2"
pin-utils = "0.1"
rand = "0.8"
regex = "1"
rustls-pemfile = { version = "0.3", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempdir = "0.3"
textnonce = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-native-tls = { version = "0.3", optional = true }
tokio-rustls = { version = "0.23", optional = true }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-tungstenite = "0.16.1"
tokio-util = { version = "0.7.3", features = ["io", "full"] }
tracing = "0.1"
uuid = { version = "0.8.2", features = ["v4"] }
route-recognizer = "0.3"
serde_urlencoded = "0.7"
time = "0.3.7"

[features]
default = []

[dev-dependencies]
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "sqlite"] }
redis = { version = "0.21", features = ["tokio-comp"] }
